--- a/index.html
+++ b/index.html
@@ -22,17 +22,15 @@
 <!-- HEADER-->
 <section class="header">
 	<div class="top" id="top">
-		<img src="image/img1.jpg"  class="active" alt="main-image">
-		<img src="image/img2.jpg" alt="main-image">
 		<img src="image/img3.jpg" alt="main-image">
-		<img src="image/img4.jpg" alt="main-image">
 	</div>
 </section>
 <!-- ABOUT US-->	
 <section class="aboutus" id="aboutus">
-	<div>
-		В Україні, щоб стати законним власником земельної ділянки є два варіанти: безкоштовно отримати її із земель, які входять в комунальну власність, шляхом її приватизації, чи придбати земельну ділянку на підставі будь-якого договору про відчуження землі або шляхом отримання цієї землі у спадок.
-    Але в обох випадках вам знадобиться допомога професіоналів в правильному оформленні земельних ділянок згідно чинного законодавства.
+	<div class="type_block">
+	<p>	В Україні, щоб стати законним власником земельної ділянки є два варіанти: безкоштовно отримати її із земель, які входять в комунальну власність, шляхом її приватизації, <br>
+	чи придбати земельну ділянку на підставі будь-якого договору про відчуження землі або шляхом отримання цієї землі у спадок.</p>
+    <p>Але в обох випадках вам знадобиться допомога професіоналів в правильному оформленні земельних ділянок згідно чинного законодавства.</p>
 <h2>Наші переваги:</h2>
 <ul>
 <li>Майже 25 років на ринку</li>
@@ -47,6 +45,7 @@
 </section>
 <!-- WORKS -->
 <section class="works" id="works">
+	<div>
 <h2>Ми пропонуємо</h2>
 	<ul>
 		<li>Розробку проектів землеустрою для відведення земельних ділянок</li>
@@ -61,12 +60,13 @@
 		<li>Інвентаризація земель</li>
 		<li>Інші послуги у сфері землеустрою</li>
 	</ul>
+	</div>
 </section>
 <!-- CERTIFICATE -->
 <section class="certificate" id="certificate">
 	<div>
-		<img src="image/cert1.jpg"  class="active" alt="main-image">
-		<img src="image/cert2.jpg" alt="main-image">
+		<img src="image/cert1.jpg" alt="main-image">
+<!--		<img src="image/cert2.jpg" alt="main-image"> -->
 	</div>
 </section>
 <!-- CONTACTS -->
@@ -84,8 +84,10 @@
 	</div>
 </section>
 <!-- MAP -->
-<section class="map">
-	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10292.919946399337!2d24.0552861!3d49.838136!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa96920a5a58f665d!2z0JrQnyAi0JrQsNGA0YLQvtCz0YDQsNGEIg!5e0!3m2!1suk!2sua!4v1485282865391" width="1349" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+<section>
+	<div class="map">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10292.919946399337!2d24.0552861!3d49.838136!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa96920a5a58f665d!2z0JrQnyAi0JrQsNGA0YLQvtCz0YDQsNGEIg!5e0!3m2!1suk!2sua!4v1485282865391" width="1349" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	</div>
 </section>
 <!--FORM -->
 <section class="form" id="form">
@@ -111,7 +113,7 @@
 <!-- FOOTER -->
 <footer class="footer">
 	<div>
-		© 2017 КП Картограф
+		© 2017 КП Картограф  <a href="http://vintage-nouveau.com/ru.html">Вінтаж</a>
 	</div>
 	<div class="share">
 		<a class="social social-vk" href="#"></a>
